# hair-filter-app

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/camera_hair_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: configs.json
app/src/main/assets/shaders/: image.frag  image.vert
app/src/main/cpp/: GLShaders.h  GLUtils.cpp  GLUtils.h  GLVideoRendererYUV420.cpp  GLVideoRendererYUV420.h  GLVideoRendererYUV420Filter.cpp  GLVideoRendererYUV420Filter.h  VideoRenderer.cpp  VideoRenderer.h  VideoRendererContext.cpp  VideoRendererContext.h  VideoRendererJNI.cpp  VideoRendererJNI.h  glad.c  globals.h  platform_file_utils.h
app/src/main/cpp/config/: AppConfig.cpp  AppConfig.h
app/src/main/cpp/face/: FaceDetect.cpp  FaceDetect.h  FaceMesh.cpp  FaceMesh.h
app/src/main/cpp/include/glad/: glad.h
app/src/main/cpp/include/tinyobj/: tiny_obj_loader.cc
app/src/main/cpp/objects/: CameraImage.cpp  CameraImage.h  FaceMask.cpp  FaceMask.h  HairObject.cpp  HairObject.h
app/src/main/cpp/render/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelObj.cpp  ModelObj.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  stb.cpp
app/src/main/java/com/example/camera_hair_app/: FullscreenActivity.java
app/src/main/java/com/example/camera_hair_app/camera_activity/: BaseViewActivity.java  GLViewActivity.java  ImagePreviewActivity.java  RecyclerViewAdapter.java  SelectHairActivity.java
app/src/main/java/com/example/camera_hair_app/camera_capture/: PreviewFrameHandler.java  VideoCameraPreview.java  VideoCapture.java
app/src/main/java/com/example/camera_hair_app/camera_render/: GLVideoRenderer.java  VideoRenderer.java
app/src/main/java/com/example/camera_hair_app/libs/: AspectFrameLayout.java  CompareSizesByArea.java  CompareSizesByWidth.java
app/src/main/res/layout/: activity_fullscreen.xml  activity_glview.xml  activity_image_preview.xml  activity_select_hair.xml  layout_listitem.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/camera_hair_app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
